--- a/Produce purchases.html
+++ b/Produce purchases.html
@@ -37,7 +37,7 @@
 
             <ul class="list-unstyled components" style="font-size: 19px;">
                 <li>
-                    <a href="#homeSubmenu" aria-expanded="false" class="dropdown-toggle">
+                    <a href="#" aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-home"></i>
                         Home
                     </a>
@@ -82,6 +82,12 @@
                     <a href="#">
                         <i class="fas fa-paper-plane"></i>
                         Contact
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-user"></i>
+                        Account
                     </a>
                 </li>
             </ul>
