--- a/account.html
+++ b/account.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="css/style6.css">
+    <link rel="stylesheet" href="css/style7.css">
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
@@ -229,10 +229,12 @@
                 <div class="col-md-2 mt-md-0 mt-3">
                     <div>
                         <img src="./Img/logo5.jpg" class="card-img-top"
-                            style="width:150px; height:150px; border-radius: 30px;" alt="Me In Class on Day on3">
+                            style="width:50px; height:50px; border-radius: 10px;" alt="Me In Class on Day on3">
                     </div>
                 </div>
-                <div class="col-md-10 mt-md-0 mt-3 textcontent">
+                <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
+                </div>
+                <!-- <div class="col-md-10 mt-md-0 mt-3 textcontent">
                     <div class="row">
                         <div class="col-md-4 mt-md-0 mt-3">
                             <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
@@ -257,11 +259,10 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-            </div>
+                </div> -->
+            </div>            
         </div>
-        <div class="footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
-        </div>
+        
     </footer>
 
 
