--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </nav>
 
 
-  <div class="row container-fluid">
+  <!-- <div class="row container-fluid">
 
     <div class="container-fluid d-none d-md-block col col-md-4" id="image-slider">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -212,8 +212,8 @@
         </button>
       </div>
     </div>
-  </div>
-  </div>
+  </div> -->
+  
 
   <div class="container" id="blog-container">
     <div class="row">
