--- a/Produce purchases.html
+++ b/Produce purchases.html
@@ -233,38 +233,14 @@
                 <div class="col-md-2 mt-md-0 mt-3">
                     <div>
                         <img src="./Img/logo5.jpg" class="card-img-top"
-                            style="width:150px; height:150px; border-radius: 30px;" alt="Me In Class on Day on3">
+                            style="width:50px; height:50px; border-radius: 10px;" alt="Me In Class on Day on3">
                     </div>
                 </div>
-                <div class="col-md-10 mt-md-0 mt-3 textcontent">
-                    <div class="row">
-                        <div class="col-md-4 mt-md-0 mt-3">
-                            <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
-                            <p style="color:rgb(255, 255, 255)">We are whole Sale producers & Distributors of Cereals.
-                                Our Products include Beans, Cow peas,G nuts, Soy
-                                beans</p>
-                        </div>
-                        <div class="col-md-3 mb-md-0 mb-4 border-left ">
-                            <h2 class="footer-heading">Discover</h2>
-                            <ul class="list-unstyled textcontent">
-                                <li><a href="#" class="py-1 d-block textcontent">Buy and Sell</a></li>
-                                <li><a href="#" class="py-1 d-block textcontent">Merchant</a></li>
-                                <li><a href="#" class="py-1 d-block textcontent">Help & Support</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3 mb-md-0 mb-4 border-left ">
-                            <h2 class="footer-heading">Resources</h2>
-                            <ul class="list-unstyled ">
-                                <li><a href="#" class="py-1 d-block textcontent">Security</a></li>
-                                <li><a href="#" class="py-1 d-block textcontent">Charts</a></li>
-                                <li><a href="#" class="py-1 d-block textcontent">Privacy</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022 Copyright:
+                    Karibu Groceries LTD
                 </div>
+
             </div>
-        </div>
-        <div class="footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
         </div>
     </footer>
 
