--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
                 </ul>
                 <form class="d-flex">
                     <button class="btn btn-outline-primary txt2" style="float: left; height: 50px;" type="submit">
-                        <a href="index.html" style="text-decoration:none; color:azure">Login</a></button>
+                        <a href="index.html" style="text-decoration:none; color:azure">Home</a></button>
                 </form>
             </div>
         </div>
