--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
   <div class="container-fluid" id="blog-container">
     <div class="row">
       <div class="col-md-4 mt-md-0 mt-3 ">
-        <h1 class=" tx2" aria-current="page" style="margin-top: 30px;">Karibu Groceries Limited</h1>
-        <h3 class=" txt2">"FEEDING THE NATION."
+        <h1 class=" tx2" aria-current="page" style=" margin-left: 30px;margin-top: 30px;">Karibu Groceries Limited</h1>
+        <h3 class=" txt2"  style=" margin-left: 30px;">"FEEDING THE NATION."
         </h3>
         <div>
           <img src="./Img/logo5.jpg" class="card-img-top d-none d-md-block" style="width:300px; height:300px; 	
-        box-shadow: 5px 20px 50px #000;border-radius: 30px; margin-left: 100px;margin-top: 40px;"
+        box-shadow: 5px 20px 50px #000;border-radius: 30px; margin-left: 30px;margin-top: 40px;"
             alt="Me In Class on Day on3">
         </div>
       </div>
       <div class="col col-md-5">
-        <div class="main" style="background-color: #181553;">
+        <div class="main" style="background-color: #213a80;">
           <input type="checkbox" id="chk" aria-hidden="true">
           <div class="signup">
             <form>
@@ -194,50 +194,51 @@
         </div>
       </div>
     </div>
-    
+  </div>
 
-    <footer class="page-footer font-small blue pt-4 " style="margin-top:10px;">
-      <div class="container-fluid text-center text-md-left ">
-        <div class="row">
-          <div class="col-md-2 mt-md-0 mt-3">
-            <div>
-              <img src="./Img/logo5.jpg" class="card-img-top" style="width:150px; height:150px; border-radius: 30px;"
-                alt="Me In Class on Day on3">
-            </div>
+
+  <footer class="page-footer font-small blue pt-4 " style="margin-top:10px;">
+    <div class="container-fluid text-center text-md-left ">
+      <div class="row">
+        <div class="col-md-2 mt-md-0 mt-3">
+          <div>
+            <img src="./Img/logo5.jpg" class="card-img-top" style="width:150px; height:150px; border-radius: 30px;"
+              alt="Me In Class on Day on3">
           </div>
-          <div class="col-md-10 mt-md-0 mt-3 textcontent">
-            <div class="row">
-              <div class="col-md-4 mt-md-0 mt-3">
-                <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
-                <p>We are whole Sale producers & Distributors of Cereals. Our Products include Beans, Cow peas,G nuts,
-                  Soy
-                  beans</p>
-              </div>
-              <div class="col-md-3 mb-md-0 mb-4 border-left ">
-                <h2 class="footer-heading">Discover</h2>
-                <ul class="list-unstyled textcontent">
-                  <li><a href="#" class="py-1 d-block textcontent">Buy and Sell</a></li>
-                  <li><a href="#" class="py-1 d-block textcontent">Merchant</a></li>
-                  <li><a href="#" class="py-1 d-block textcontent">Help & Support</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3 mb-md-0 mb-4 border-left ">
-                <h2 class="footer-heading">Resources</h2>
-                <ul class="list-unstyled ">
-                  <li><a href="#" class="py-1 d-block textcontent">Security</a></li>
-                  <li><a href="#" class="py-1 d-block textcontent">Charts</a></li>
-                  <li><a href="#" class="py-1 d-block textcontent">Privacy</a></li>
-                </ul>
-              </div>
+        </div>
+        <div class="col-md-10 mt-md-0 mt-3 textcontent">
+          <div class="row">
+            <div class="col-md-4 mt-md-0 mt-3">
+              <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
+              <p>We are whole Sale producers & Distributors of Cereals. Our Products include Beans, Cow peas,G nuts,
+                Soy
+                beans</p>
+            </div>
+            <div class="col-md-3 mb-md-0 mb-4 border-left ">
+              <h2 class="footer-heading">Discover</h2>
+              <ul class="list-unstyled textcontent">
+                <li><a href="#" class="py-1 d-block textcontent">Buy and Sell</a></li>
+                <li><a href="#" class="py-1 d-block textcontent">Merchant</a></li>
+                <li><a href="#" class="py-1 d-block textcontent">Help & Support</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3 mb-md-0 mb-4 border-left ">
+              <h2 class="footer-heading">Resources</h2>
+              <ul class="list-unstyled ">
+                <li><a href="#" class="py-1 d-block textcontent">Security</a></li>
+                <li><a href="#" class="py-1 d-block textcontent">Charts</a></li>
+                <li><a href="#" class="py-1 d-block textcontent">Privacy</a></li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
-      <div class="footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
-      </div>
-    </footer>
+    </div>
+    <div class="footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
+    </div>
+  </footer>
 
-    <script src="css/bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="css/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
