--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-md-4 mt-md-0 mt-3 ">
         <h1 class=" tx2" aria-current="page" style=" margin-left: 30px;margin-top: 30px;">Karibu Groceries Limited</h1>
-        <h3 class=" txt2"  style=" margin-left: 30px;">"FEEDING THE NATION."
+        <h3 class=" txt2" style=" margin-left: 30px;">"FEEDING THE NATION."
         </h3>
         <div>
           <img src="./Img/logo5.jpg" class="card-img-top d-none d-md-block" style="width:300px; height:300px; 	
@@ -78,9 +78,9 @@
 
         </div>
       </div>
-      <div class="col-md-2 mt-md-0 mt-3 ">
-        <div class="row container-fluid casol" style="margin-top:20px;padding:0%">
-          <div class="container-fluid d-none d-md-block col col-md-12" id="image-slider">
+      <div class="col-md-2 mt-md-0 mt-3  ">
+        <div class="row container-fluid " style="margin-top:20px;padding:0%">
+          <div class="container-fluid d-none d-md-block col col-md-12 casol" id="image-slider">
             <div id="carouselExampleCaptions1" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -91,36 +91,26 @@
                   aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                   aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                  aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
-                  aria-label="Slide 5"></button>
+
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./Img/peas1.jpg" class=" customheight" alt="...">
+                  <img src="./Img/maize1.jpg" class=" customheight" alt="...">
 
                 </div>
                 <div class="carousel-item">
-                  <img src="./Img/maize5.jpg" class="  customheight" alt="...">
+                  <img src="./Img/maize2.jpg" class="  customheight" alt="...">
 
                 </div>
                 <div class="carousel-item">
-                  <img src="./Img/maize4.jpg" class="  customheight" alt="...">
+                  <img src="./Img/maize3.jpg" class="  customheight" alt="...">
 
                 </div>
                 <div class="carousel-item">
-                  <img src="./Img/maize8.jpg" class=" customheight" alt="...">
+                  <img src="./Img/maize4.jpg" class=" customheight" alt="...">
 
                 </div>
-                <div class="carousel-item">
-                  <img src="./Img/soy4.jpg" class="  customheight" alt="...">
 
-                </div>
-                <div class="carousel-item">
-                  <img src="./Img/beans1.jpg" class="  customheight" alt="...">
-
-                </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions1"
                 data-bs-slide="prev">
@@ -135,8 +125,8 @@
             </div>
           </div>
         </div>
-        <div class="row container-fluid casol" style="margin-top:20px;padding:0%">
-          <div class="container-fluid d-none d-md-block col col-md-12" id="image-slider">
+        <div class="row container-fluid " style="margin-top:20px;padding:0%">
+          <div class="container-fluid d-none d-md-block col col-md-12 casol" id="image-slider">
             <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -147,36 +137,26 @@
                   aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                   aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                  aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
-                  aria-label="Slide 5"></button>
+
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./Img/maize3.jpg" class=" customheight" alt="...">
+                  <img src="./Img/maize7.jpg" class=" customheight" alt="...">
 
                 </div>
                 <div class="carousel-item">
-                  <img src="./Img/beans4.jpg" class="  customheight" alt="...">
+                  <img src="./Img/maize6.jpg" class="  customheight" alt="...">
 
                 </div>
                 <div class="carousel-item">
-                  <img src="./Img/soy1.jpg" class="  customheight" alt="...">
+                  <img src="./Img/maize5.jpg" class="  customheight" alt="...">
 
                 </div>
                 <div class="carousel-item">
-                  <img src="./Img/beans1.jpg" class=" customheight" alt="...">
+                  <img src="./Img/maize8.jpg" class=" customheight" alt="...">
 
                 </div>
-                <div class="carousel-item">
-                  <img src="./Img/soy2.jpg" class="  customheight" alt="...">
 
-                </div>
-                <div class="carousel-item">
-                  <img src="./Img/beans3.jpg" class="  customheight" alt="...">
-
-                </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions2"
                 data-bs-slide="prev">
