--- a/Local produce input.html
+++ b/Local produce input.html
@@ -107,7 +107,7 @@
         <!-- Page Content  -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light " style="background:#efeef0">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-primary" style="background:#181553">
@@ -120,7 +120,7 @@
                         <i class="fas fa-align-justify"></i>
                     </button>
                     <div>
-                        <h2>Karibu Groceries limited</h2>
+                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd FARM PRODUCT FORM</h2>
                     </div>
 
 
