--- a/Produce purchases.html
+++ b/Produce purchases.html
@@ -107,7 +107,7 @@
         <!-- Page Content  -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light " style="background:#efeef0">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-primary" style="background:#181553">
@@ -132,16 +132,6 @@
                                 <button class="btn btn-outline-primary"><a class="nav-link" href="index.html"
                                         style="color:#000000">LogOut</a></button>
                             </li>
-
-                            <!-- <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li> -->
                         </ul>
                     </div>
                 </div>
