--- a/account.html
+++ b/account.html
@@ -91,22 +91,13 @@
                 </li>
             </ul>
 
-            <!-- <ul class="list-unstyled CTAs">
-                <li>
-                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
-                </li>
-                <li>
-                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
-                </li>
-            </ul> -->
-
 
         </nav>
 
         <!-- Page Content  -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light " style="background:#efeef0">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-primary" style="background:#181553">
@@ -119,7 +110,7 @@
                         <i class="fas fa-align-justify"></i>
                     </button>
                     <div>
-                        <h2>Karibu Groceries limited</h2>
+                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd, Employee Account</h2>
                     </div>
 
 
@@ -232,7 +223,8 @@
                             style="width:50px; height:50px; border-radius: 10px;" alt="Me In Class on Day on3">
                     </div>
                 </div>
-                <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
+                <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022 Copyright:
+                    Karibu Groceries LTD
                 </div>
                 <!-- <div class="col-md-10 mt-md-0 mt-3 textcontent">
                     <div class="row">
@@ -260,9 +252,9 @@
                         </div>
                     </div>
                 </div> -->
-            </div>            
+            </div>
         </div>
-        
+
     </footer>
 
 
