--- a/sales input.html
+++ b/sales input.html
@@ -95,7 +95,7 @@
         <!-- Page Content  -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light " style="background:#efeef0">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-primary" style="background:#181553">
@@ -107,7 +107,7 @@
                         <i class="fas fa-align-justify"></i>
                     </button>
                     <div>
-                        <h2>Karibu Groceries limited</h2>
+                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd PRODUCT SALES FORM</h2>
                     </div>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
@@ -123,7 +123,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="main custom1">
-                            <h2 class="txt1" style="font-size:45px;text-decoration: underline;"> Produce Sales Form</h2>
+                            <h2 class="txt1" style="font-size:45px;text-decoration: underline;"> Sales Form</h2>
                             <div class="signup">
                                 <div class="row ">
                                     <div class=" col col-md-12">
