--- a/Local produce input.html
+++ b/Local produce input.html
@@ -120,7 +120,7 @@
                         <i class="fas fa-align-justify"></i>
                     </button>
                     <div>
-                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd FARM PRODUCT FORM</h2>
+                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd, FARM PRODUCT FORM</h2>
                     </div>
 
 
