--- a/Produce purchases.html
+++ b/Produce purchases.html
@@ -56,7 +56,7 @@
                         <li>
                             <a href="#">Farms</a>
                         </li>
-                        
+
                     </ul>
                 </li>
                 <!-- <li>
@@ -120,7 +120,7 @@
                         <i class="fas fa-align-justify"></i>
                     </button>
                     <div>
-                        <h2>Karibu Groceries limited</h2>
+                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd, PRODUCT PURCHASES FORM</h2>
                     </div>
 
 
