--- a/sales input.html
+++ b/sales input.html
@@ -107,7 +107,7 @@
                         <i class="fas fa-align-justify"></i>
                     </button>
                     <div>
-                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd PRODUCT SALES FORM</h2>
+                        <h2 style="margin-left:15px;margin-top: 20px;">Karibu Groceries Ltd, PRODUCT SALES FORM</h2>
                     </div>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
