--- a/index.html
+++ b/index.html
@@ -38,18 +38,21 @@
 
   <div class="container-fluid" id="blog-container">
     <div class="row">
-      <div class="col-md-4 mt-md-0 mt-3 ">
-        <h1 class=" tx2" aria-current="page" style=" margin-left: 30px;margin-top: 30px;">Karibu Groceries Limited</h1>
+      <div class="col-md-4 mt-md-0 mt-4 ">
+        <!-- <h3 class=" tx2" style=" margin-left: 30px;margin-top: 30px;">Karibu Groceries Limited</h3> -->
+
+        <h1 class=" txt1" style=" margin-left: 30px;">Karibu Groceries Limited
+        </h1>
         <h3 class=" txt2" style=" margin-left: 30px;">"FEEDING THE NATION."
         </h3>
         <div>
-          <img src="./Img/logo5.jpg" class="card-img-top d-none d-md-block" style="width:300px; height:300px; 	
+          <img src="./Img/logo5.jpg" class="card-img-top d-none d-md-block" style="width:200px; height:200px; 	
         box-shadow: 5px 20px 50px #000;border-radius: 30px; margin-left: 30px;margin-top: 40px;"
             alt="Me In Class on Day on3">
         </div>
       </div>
       <div class="col col-md-5">
-        <div class="main" style="background-color: #213a80;">
+        <div class="main" style="background-color: #484c55;">
           <input type="checkbox" id="chk" aria-hidden="true">
           <div class="signup">
             <form>
@@ -176,8 +179,24 @@
     </div>
   </div>
 
+  <footer class="page-footer font-small blue pt-4 ">
+    <div class="container-fluid text-center text-md-left ">
+      <div class="row">
+        <div class="col-md-2 mt-md-0 mt-3">
+          <div style="margin-top: 5px;">
+            <img src="./Img/logo5.jpg" class="card-img-top"
+              style="width:80px; height:80px;margin-bottom: 5px;margin-top: 5px; border-radius: 10px;"
+              alt="Me In Class on Day on3">
+          </div>
+        </div>
+        <div class=" col-md-10 mt-md-0 mt-3 footer-copyright text-center py-3 textcontent">© 2022 Copyright:
+          Karibu Groceries LTD
+        </div>
 
-  <footer class="page-footer font-small blue pt-4 " style="margin-top:10px;">
+      </div>
+    </div>
+  </footer>
+  <!-- <footer class="page-footer font-small blue pt-4 " style="margin-top:10px;">
     <div class="container-fluid text-center text-md-left ">
       <div class="row">
         <div class="col-md-2 mt-md-0 mt-3">
@@ -189,7 +208,7 @@
         <div class="col-md-10 mt-md-0 mt-3 textcontent">
           <div class="row">
             <div class="col-md-4 mt-md-0 mt-3">
-              <h2 class="text-uppercase ">Karibu Groceries Ltd .</h2><br>
+              <h2 class="text-uppercase ">Karibu Groceries Ltd</h2><br>
               <p>We are whole Sale producers & Distributors of Cereals. Our Products include Beans, Cow peas,G nuts,
                 Soy
                 beans</p>
@@ -216,7 +235,7 @@
     </div>
     <div class="footer-copyright text-center py-3 textcontent">© 2022 Copyright: Karibu Groceries LTD
     </div>
-  </footer>
+  </footer> -->
 
   <script src="css/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
